[package]
name = "openraft-rocksstore"
description = "A rocksdb based implementation of the `openraft::RaftStorage` trait."
documentation = "https://docs.rs/openraft-rocksstore"
readme = "README.md"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openraft = { path= "../openraft", version = "0.9.0", features=["serde"] }

rocksdb = "0.20.1"
byteorder = "1.4.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
tracing = "0.1.29"

[dev-dependencies]
async-trait = { version = "0.1.36" }
tempfile = { version = "3.4.0" }

[package.metadata.docs.rs]
all-features = true
