[package]
name = "openraft-rt-compio"
description = "compio AsyncRuntime support for Openraft"
documentation = "https://docs.rs/openraft-rt-compio"
readme = "README.md"
version = "0.10.0"
edition = "2021"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
categories = ["algorithms", "asynchronous", "data-structures"]
homepage = "https://github.com/databendlabs/openraft"
keywords = ["consensus", "raft"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databendlabs/openraft"

[dependencies]
openraft = { path = "../openraft", version = "0.10.0", default-features = false, features = ["singlethreaded"] }

compio           = { version = ">=0.14.0", features = ["runtime", "time"] }
flume            = { version = "0.11.1", default-features = false, features = ["async"] }
futures          = { version = "0.3" }
pin-project-lite = { version = "0.2.16" }
rand             = { version = "0.9" }
see              = { version = "0.1.1" }

[dev-dependencies]
compio = { version = ">=0.14.0", features = ["macros"] }
