[package]
name = "tests-turmoil"
description = "Turmoil simulation tests for openraft"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[[bin]]
name = "fuzz"
path = "src/bin/fuzz.rs"

[dependencies]
openraft = { path = "../openraft", features = ["type-alias", "serde", "metrics-logids"] }
openraft-rt = { path = "../rt" }
openraft-rt-tokio = { path = "../rt-tokio" }

clap = { version = "4", features = ["derive"] }
bincode = "1.3"
ctrlc = "3.4"
futures = "0.3"
rand = { package = "rand", version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
turmoil = "0.6"

[dev-dependencies]
test-harness = "0.3"
