# These tests depend on `memstore`, while `memstore` enables `serde` feature of `openraft`.
# This make it impossible to test openraft with `serde` feature off.

[package]
name = "tests"
description = "openraft integration tests. To prevent memstore from enabling `serde` feature"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
documentation = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }

[dependencies]

[dev-dependencies]
openraft           = { path="../openraft", version = "0.9.0" }
openraft-memstore  = { path="../memstore" }

anyerror           = { workspace = true }
anyhow             = { workspace = true }
async-entry        = { workspace = true }
derive_more        = { workspace = true }
futures            = { workspace = true }
lazy_static        = { workspace = true }
maplit             = { workspace = true }
pretty_assertions  = { workspace = true }
rand               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-appender   = { workspace = true }
tracing-subscriber = { workspace = true }


[features]

bt = ["openraft/bt"]
single-term-leader = ["openraft/single-term-leader"]
loosen-follower-log-revert = ["openraft/loosen-follower-log-revert"]
