# These tests depend on `memstore`, while `memstore` enables `serde` feature of `openraft`.
# This make it impossible to test openraft with `serde` feature off.

[package]
name = "bench-minimal"
description = "Minimal openraft benchmark with in-memory store and no network"

version = "0.1.0"
edition = "2024"
authors = [
    "drdr xp <drdr.xp@gmail.com>",
]
categories = ["algorithms", "asynchronous", "data-structures"]
homepage = "https://github.com/databendlabs/openraft"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databendlabs/openraft"

[dependencies]
openraft            = { path = "../../openraft", version = "0.10.0", features = ["serde", "type-alias", "runtime-stats"] }
openraft-legacy = { path = "../../legacy", version = "0.10.0" }

anyhow     = { version = "1.0.63" }
clap       = { version = "4.2", features = ["derive"] }
futures    = { version = "0.3" }
maplit     = { version = "1.0.2" }
serde      = { version = "1.0.114", features = ["derive", "rc"] }
serde_json = { version = "1.0.57" }
tokio      = { version = "1.39", default-features = false, features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time", "tracing"] }
tracing    = { version = "0.1.29" }

console-subscriber  = { version = "0.5", optional = true }
tracing-flame       = { version = "0.2", optional = true }
tracing-subscriber  = { version = "0.3", optional = true }

[dev-dependencies]

[features]
bt = ["openraft/bt"]
single-term-leader = []
tokio-console = ["console-subscriber"]
flamegraph = ["tracing-flame", "tracing-subscriber"]

[profile.release]
debug = 2
split-debuginfo = "packed"
lto = "thin"
codegen-units = 1
