[package]
name = "multi-raft-kv"
version = "0.1.0"
readme = "README.md"

edition = "2024"
authors = [
    "AriesDevil <ariesdevil77@gmail.com>",
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An example Multi-Raft distributed key-value store with 3 groups built upon `openraft`."
homepage = "https://github.com/databendlabs/openraft"
keywords = ["raft", "consensus", "multi-raft"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databendlabs/openraft"

[dependencies]
mem-log         = { path = "../mem-log", features = [] }
openraft        = { path = "../../openraft", default-features = false, features = ["serde", "type-alias"] }
openraft-multi = { path = "../../multiraft" }

futures            = { version = "0.3" }
serde              = { version = "1", features = ["derive"] }
serde_json         = { version = "1" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[features]

[package.metadata.docs.rs]
all-features = true

