[package]
name = "network-v1-http"
version = "0.1.0"
readme = "README.md"

edition = "2024"
authors = [
  "drdr xp <drdr.xp@gmail.com>",
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An example network implementation v1 built upon `openraft`."
homepage = "https://github.com/databendlabs/openraft"
keywords = ["raft", "consensus", "network"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databendlabs/openraft"

[dependencies]
openraft = { path = "../../openraft", features = ["serde", "type-alias"] }
openraft-legacy = { path = "../../legacy" }

actix-web = { version = "4.0.0-rc.2", optional = true }
reqwest    = { version = "0.12.5", features = ["json"] }
serde      = { version = "1.0.114", features = ["derive"] }
tokio      = { version = "1.35.1", features = ["full"] }
tracing    = { version = "0.1.40" }

[features]
default = []
actix = ["dep:actix-web"]

[package.metadata.docs.rs]
all-features = true
