[package]
name = "raft-kv-memstore-grpc"
version = "0.1.0"
readme = "README.md"

edition = "2024"
authors = [
    "Sainath Singineedi <sainathsingineedi2222@gmail.com>",
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An example distributed key-value store built upon `openraft`."
homepage = "https://github.com/databendlabs/openraft"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databendlabs/openraft"

[[bin]]
name = "raft-key-value"
path = "src/bin/main.rs"

[dependencies]
log-mem  = { path = "../log-mem", features = [] }
openraft = { path = "../../openraft", features = ["type-alias"] }

clap               = { version = "4.6.1", features = ["derive", "env"] }
futures            = { version = "0.3.32" }
prost              = { version = "0.14.3" }
tonic              = { version = "0.14.6" }
tonic-prost        = { version = "0.14.6" }
tracing            = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
anyhow = { version = "1.0.63" }
maplit = { version = "1.0.2" }

[features]

[build-dependencies]
prost-build = { version = "0.14.3" }
tonic-prost-build = { version = "0.14.6" }

[package.metadata.docs.rs]
all-features = true
