[package]
name = "raft-kv-memstore-opendal-snapshot-data"
version = "0.1.0"
readme = "README.md"

edition = "2021"
authors = [
    "drdr xp <drdr.xp@gmail.com>",
    "Pedro Paulo de Amorim <pepa.amorim@gmail.com>",
    "Xuanwo <github@xuanwo.io>",
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An example distributed key-value store built upon `openraft`."
homepage = "https://github.com/datafuselabs/openraft"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/datafuselabs/openraft"

[dependencies]
memstore = { path = "../memstore", features = [] }
openraft = { path = "../../openraft", features = ["serde", "type-alias"] }

serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "1.0", default-features = false, features = ["sync"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
opendal = "0.48.0"

[dev-dependencies]
maplit = "1.0.2"

[features]

[package.metadata.docs.rs]
all-features = true
